--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   },
   "dependencies": {
     "dayjs": "^1.11.11",
+    "docx": "^9.3.0",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.372.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.5.0",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
